syntax = "proto3";

package BasketProto;

import "google/protobuf/timestamp.proto";

service GrpcBasket {
  rpc GetBasket (GetBasketRequest) returns (GetBasketReply);
  rpc SetBasket (SetBasketRequest) returns (SetBasketReply);
  rpc DeleteBasket (DeleteBasketRequest) returns (DeleteBasketReply);
}

message BasketItem {
	string productid = 1;
	string name = 2;
	string description = 3;
	int32 price = 4;
	int32 quantity = 5;
}

message UserBasket {
	string email = 1;
	string id = 2;
	google.protobuf.Timestamp created = 3;
	repeated BasketItem items = 4;
	string coupon = 5;
	repeated string receipt = 6;
	int32 total = 7;
}

message GetBasketRequest {
  string email = 1;
}
message GetBasketReply {
  UserBasket basket = 1;
}

message SetBasketRequest {
  UserBasket basket = 1;
}
message SetBasketReply {
  UserBasket basket = 1;
}

message DeleteBasketRequest {
  string email = 1;
}
message DeleteBasketReply {
  UserBasket basket = 1;
}